Fixes to API specs
* Create Ec2AmiInfoSummary to replace Ec2AmiInfo in ListImages
* Add missing documentation in DescribeClusterInstances
