# cli/src/pcluster/api/controllers/image_operations_controller.py
@@ -36,6 +36,7 @@ from pcluster.api.models import (
     DescribeImageResponseContent,
     DescribeOfficialImagesResponseContent,
     Ec2AmiInfo,
+    Ec2AmiInfoSummary,
     ImageConfigurationStructure,
     ImageInfoSummary,
     ImageStatusFilteringOption,
@@ -387,7 +388,7 @@ def _image_info_to_image_info_summary(image):
     return ImageInfoSummary(
         image_id=image.pcluster_image_id,
         image_build_status=ImageBuildStatus.BUILD_COMPLETE,
-        ec2_ami_info=Ec2AmiInfo(ami_id=image.id),
+        ec2_ami_info=Ec2AmiInfoSummary(ami_id=image.id),
         region=os_lib.environ.get("AWS_DEFAULT_REGION"),
         version=image.version,
     )
